# PathCAD_Gui

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  test.sh
TreeItems/include/: DataElementItem.h  LinePathItem.h  ModelTreeItem.h  PathGroupItem.h
TreeItems/src/: DataElementItem.cpp  LinePathItem.cpp  ModelTreeItem.cpp  PathGroupItem.cpp
include/: MainWindow.h  ModelTree.h  PathGroupItem.h  Settings.h
src/: CMakeLists.txt  MainWindow.cpp  ModelTree.cpp  PathGroupItem.cpp  Settings.cpp  SettingsDialog.cpp  Timeline.cpp  main.cpp  res.qrc
src/include/: MainWindow.h  ModelTree.h  PathGroupItem.h  Settings.h  SettingsDialog.h
